model and Company service